--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
+
+		<title>Open Source for Developer</title>
+
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
-
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/sky.css">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -23,9 +30,324 @@
 	</head>
 	<body>
 		<div class="reveal">
+
+			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+
+				<section>
+					<h1>Open Source</h1>
+					<h3>for Software Developer</h3>
+					<p>
+						<small>by <a href="http://sinauacademy.com">IESA Luthfy Maliek</a> / <a href="https://www.instagram.com/ilmaliek">@ilmaliek</a></small>
+						<br/><img src="img/sinaulogo.png" style="border:0;" />
+					</p>
+				</section>
+
+				<section>
+					<h2>Who Am I ?</h2>
+					<ul>
+						<li>IESA LUTHFY MALIEK</li>
+						<li>Analyst Programmer / Software Developer</li>
+						<li>+5yrs Experience</li>
+						<li>Daily working: Java Enterprise - Mule ESB - Health Information System - Health & Finance System Integration - Health & BPJS Integration - Health & Aussie Medical Integration</li>
+						<li>Interested with: AngularJS - Ionic Mobile Hybrid</li>
+						<li>Co-Founder Sinau Academy sinauacademy.com https://www.facebook.com/groups/sinauacademy/</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Agenda</h2>
+					<ul>
+						<li>Software Development / Rekayasa Perangkat Lunak</li>
+						<li>Software Development Architecture</li>
+						<li>Software Development Role</li>
+						<li>Open Source Tools & Programming Language</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software</h2>
+					<ul>
+						<li>Apa itu software?</li>
+						<li>Tujuan software?</li>
+						<li>Siapa pembuat software?</li>
+						<li>Siapa pengguna software?</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Kategori Pembagian Software</h2>
+					<ul>
+						<li>Sistem Operasi (Windows, Mac, Linux)</li>
+						<li>Aplikasi siap pakai (word, browser, music player, draw)</li>
+						<li>Utility (Anti virus, H/W driver)</li>
+						<li>Bahasa Pemrograman</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Jenis-Jenis Software</h2>
+					<ul>
+						<li>Commercial</li>
+						<li>Shareware (versi trial 30 hari)</li>
+						<li>Free Software (GNU project, Richard Stallman)</li>
+						<li>Open Source Software</li>
+						<li>Malware (Software berbahaya)</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>SDLC - Tahapan Pembuatan Software</h2>
+					<ul>
+						<li>Requirement</li>
+						<li>Analisis dan Desain</li>
+						<li>Implementasi / Ngoding + Unit Testing</li>
+						<li>Testing</li>
+						<li>Deploy / Pemasangan</li>
+						<li>Maintenance / Software Support</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Metodologi Pembuatan Software</h2>
+					<ul>
+						<li>Waterfall</li>
+						<li>RUP / Unified Process - Well documented</li>
+						<li>Scrum - Less documented yang penting good quality</li>
+						<li>Coboy - Yang penting jadi</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Persepsi Keliru Pengembangan Software</h2>
+					<ul>
+						<li>Semua dikerjakan programmer</li>
+						<li>Kerjaannya cuma ngoding</li>
+						<li>Kalo software-nya nggak jalan pasti salah programmer</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software nggak jalan salah programmer?</h2>
+					<ul>
+						<li>Feature defect (Product Owner)</li>
+						<li>Requirement defect (Bisnis Analis)</li>
+						<li>Design defect (Sistem Analis)</li>
+						<li>Functionality defect (Programmer / Tester / QA)</li>
+						<li>Server / Environment problem (DevOps)</li>
+						<li>Database problem (DBA)</li>
+						<li>Networking & Infrastructure problem (ITS)</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software Development Role</h2>
+					<ul>
+						<li>Programmer - Tukang ngoding</li>
+						<li>Database Admin / DBA - Penjaga database</li>
+						<li>Graphic / UI UX Designer - Memperindah user interface, mengatur estetika suatu tampilan</li>
+						<li>Konsultan / Bisnis Analis - Membuat requirement dan mempresentasikannya ke sistem analis dan programmer</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software Development Role (2)</h2>
+					<ul>
+						<li>Sistem Analis - Design & Team Leader, mendelegasikan task & bertanggung jawab pada keberhasilan development, seorang sistem analis biasanya merupakan programmer senior yang telah berpengalaman</li>
+						<li>QA / Tester - Melakukan pengujian software, mencari kesalahan software, menentukan layak atau tidaknya fitur yang telah didevelop</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software Development Role (3)</h2>
+					<ul>
+						<li>Tech Evangelist - Super coder / senior analis yang sudah berpengalaman, problem solver, memberikan saran teknologi untuk development, menguasai banyak teknologi</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software Development Role (4)</h2>
+					<ul>
+						<li>Project Manager - Mengawasi jalannya development, mengatur komposisi tim, melakukan negosiasi dengan klien, dan menjadi penengah ketika tim bermasalah dengan klien</li>
+						<li>DevOps - Menyiapkan infrastruktur yang digunakan saat development, membantu programmer saat menemui kendala pada infrastruktur</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software Development Role (5)</h2>
+					<ul>
+						<li>IT Support - Mengatur dan mengamankan jaringan, maintenance hardware dan sistem operasi komputer</li>
+						<li>Penetration Tester / Hacker - Mencari dan menguji celah keamanan software</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Persiapan Ngoding</h2>
+					<ul>
+						<li>Bahasa Pemrograman</li>
+						<li>Database</li>
+						<li>Version Control</li>
+						<li>Backend / Frontend</li>
+						<li>Mobile / Desktop / Web</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Programming Languages</h2>
+					<img src="img/programming-languages.jpg" style="border:0; width:90%; height:90%" />
+				</section>
+
+				<section>
+					<h2>Backend / Frontend</h2>
+					<img src="img/mvc.png" style="border:0; width:70%; height:70%" />
+				</section>
+
+				<section>
+					<h2>Backend</h2>
+					<ul>
+						<li>C/C++</li>
+						<li>Python</li>
+						<li>Java</li>
+						<li>C#</li>
+						<li>Ruby</li>
+						<li>PHP</li>
+						<li>GOLang</li>
+						<li>NodeJS</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Frontend</h2>
+					<ul>
+						<li>HTML + CSS</li>
+						<li>JSP</li>
+						<li>ASP</li>
+						<li>PHP</li>
+						<li>JavaScript - JQuery, AngularJS, ReactJS</li>
+						<li>Native Mobile - Java Android, Obj-C iOS</li>
+						<li>Hybrid Mobile - Ionic, Cordova, React Native</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Memilih Bhs.Pemrograman</h2>
+					<ul>
+						<li>Kuasai Frontend + Backend</li>
+						<li>Banyak digunakan / banyak lowongan</li>
+						<li>Banyak support / komunitas</li>
+						<li>Tidak terikat platform / vendor tertentu</li>
+						<li>Disupport berbagai technology (REST, HL7, dll)</li>
+						<li>1 bahasa untuk semua (desktop, web, mobile, cloud, dll)</li>
+					</ul>
+					</br><h5 class="fragment">Pilihan saya? <b>Java + JavaScript</b></h5>
+				</section>
+
+				<section>
+					<h2>Database</h2>
+					<ul>
+						<li>SQL - SQL Server, MySQL, PostgreSQL, Oracle</li>
+						<li>NoSQL - MongoDB, Redis, Hadoop, Cassandra, CouchDB, ... fyuh banyak, sumber <a href="http://nosql-database.org">http://nosql-database.org</a></li>
+						<li>Cloud NoSQL - AWS DynamoDB, Azure DocumentDB</li>
+					</ul>
+					</br><h5 class="fragment">Rekomendasi? pelajari <b>MySQL/PostgreSQL, MongoDB, Redis</b></h5>
+				</section>
+
+				<section>
+					<h2>Ngoding Aja Nggak Cukup</h2>
+					<ul>
+						<li>Coding harus dijaga riwayat perubahannya</li>
+						<li>Disimpan ditempat aman supaya tidak rawan hilang</li>
+						<li>Code juga harus di-share supaya dapat dikerjakan bersama-sama</li>
+					</ul>
+					</br><h5 class="fragment">Solusi? gunakan <b>Version Control</b></h5>
+				</section>
+
+				<section>
+					<h2>Version Control</h2>
+					<ul>
+						<li>CVS</li>
+						<li>Subversion</li>
+						<li>Microsoft TFS (bayar)</li>
+						<li><b>Git</b> - Ini yang paling populer</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Git</h2>
+					<ul>
+						<li>Local / On-Premise - Gitblit</li>
+						<li>Cloud - <b>Github</b>, Bitbucket, Sourceforge, dll</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Software Environment</h2>
+					<ul>
+						<li>On-Premise / perangkat sendiri - Server, VM, VPS, dll</li>
+						<li>Cloud</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Cloud</h2>
+					<h5>IaaS - PaaS - SaaS</h5>
+					<img src="img/cloud.jpg" style="border:0; width:90%; height:90%" />
+				</section>
+
+				<section>
+					<h2>Mengapa Cloud?</h2>
+					<ul>
+						<li>Instant & cepat</li>
+						<li>Tidak perlu memiliki perangkat (hemat maintenance, listrik, mati lampu, dll)</li>
+						<li>Mudah (scale-in, scale-out, scale-up, scale-down)</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Layanan Cloud</h2>
+					<h5>AWS</h5>
+					<img src="img/aws.jpg" style="border:0;" />
+				</section>
+
+				<section>
+					<h2>Cloud Open Source</h2>
+					<h5>OpenStack - IaaS</h5>
+					<img src="img/openstack.jpg" style="border:0; width:70%; height:70%" />
+				</section>
+
+				<section>
+					<h2>Cloud Open Source (2)</h2>
+					<h5>Cloud Foundry - PaaS</h5>
+					<img src="img/cloudfoundry.jpg" style="border:0; width:90%; height:90%" />
+				</section>
+
+				<section>
+					<h2>Arsitektur Software</h2>
+					<h5>Monolitik - MVC, MVVM, dll</h5>
+					<img src="img/monolithic-application.jpg" style="border:0; width:65%; height:65%" />
+				</section>
+
+				<section>
+					<h2>Arsitektur Software (2)</h2>
+					<h5>Microservices</h5>
+					<img src="img/microservices-architecture.png" style="border:0; width:75%; height:75%" />
+				</section>
+
+				<section>
+					<h2>Kelebihan Microservices</h2>
+					<ul>
+						<li>Language agnostic APIs - API tidak bergantung pada bahasa program</li>
+						<li>Small building blocks - Pengembangannya dengan membangun blok-blok kecil</li>
+						<li>Highly decoupled - Satu sama lain tidak saling ketergantungan</li>
+						<li>Focused on doing small task - Fokus pada pekerjaan yang lebih spesifik</li>
+						<li>Modular approach - Pendekatannya modular</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Thx U... Happy Coding!!!</h2>
+					<img src="img/coding.jpg" style="border:0; width:65%; height:65%" />
+				</section>
 			</div>
 		</div>
 
@@ -33,18 +355,30 @@
 		<script src="js/reveal.js"></script>
 
 		<script>
+
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
+				controls: true,
+				progress: true,
 				history: true,
+				center: true,
+
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true }
 				]
 			});
+
+			Reveal.configure({ pdfMaxPagesPerSlide: 1 })
+
 		</script>
+
 	</body>
 </html>
